# simplefunctions-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-audit.yml
simplefunctions/: __init__.py  cli.py  client.py  integrations.py
tests/: test_client.py
